# example-tagged-union

./: README.md
go/: .golangci.yaml  README.md  altjson.go  go.mod  in.json  main.go  out.md
go/alt1/: alt1.go
go/alt2/: alt2.go
go/alt3/: alt3.go
haskell/: Main.hs  README.md  example.cabal  in.json  out.md  out.txt
openapi/: README.md  go.mod  main.go  oapi-codegen.yaml  package-lock.json  package.json  spec.yaml
protobuf/: README.md  buf.gen.yaml
protobuf/proto/: api.proto  directory.proto
rust/: Cargo.toml  README.md  out.md  out.txt
rust/src/: main.rs
typescript/: README.md  deno.json  in.json  main.ts  out.md
vlang/: README.md  example.mod  in.json  main.v  out.md  out.txt
